compiler/crates/types/tests/typeerr/reassign_wrong_type.th
ให้ ชื่อ: ข้อความ = "สม";
ชื่อ = 42;
